Updates - refactored code (stable release preparations)

--- a/smtp/src/views/email.hbs
+++ b/smtp/src/views/email.hbs
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://unpkg.com/@picocss/pico@1.*/css/pico.min.css"
     />
-    <title>Authentication | {{title}}</title>
+    <title>Hotel Elmiriam Mail Service | {{title}}</title>
   </head>
 
   <body>
